--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Mentor | Recipe page</title>
+    <title>Frontend Mentor | Skilled e-learning landing page</title>
   </head>
   <body>
     <div id="root"></div>
